Adjust dags and docker files in my quest to get airflow working

--- a/02_data_ingestion/airflow/Dockerfile
+++ b/02_data_ingestion/airflow/Dockerfile
@@ -35,6 +35,8 @@ RUN DOWNLOAD_URL="https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/goo
 
 WORKDIR $AIRFLOW_HOME
 
+COPY ./google /opt/airflow/google
+
 COPY scripts scripts
 RUN chmod +x scripts
 
