Update docker compose file to account for better secret hiding

--- a/02_data_ingestion/kestra/gcp_run/docker-compose.yml
+++ b/02_data_ingestion/kestra/gcp_run/docker-compose.yml
@@ -21,6 +21,8 @@ services:
 
   kestra:
     image: kestra/kestra:latest
+    env_file:
+      - .env_encoded
     pull_policy: always
     user: "root"
     command: server standalone
